--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,7 +1,8 @@
 trailingComma: all
 semi: false
-singleQuote: true
+singleQuote: false
 printWidth: 75
-tabWidth: 2
+tabWidth: 4
+useTabs: true
 proseWrap: always
 endOfLine: lf
