--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/express": "^4.17.14",
 		"@types/jest": "^29.1.2",
 		"jest": "^29.1.2",
+		"jest-extended": "^3.1.0",
 		"npm-run-all": "^4.1.5",
 		"rollup": "^2.79.1",
 		"ts-jest": "^29.0.3",
